# note-demo

./: README.md  pyproject.toml
.github/workflows/: pages.yml
doc/: conf.py  contributing.md  index.md
doc/_static/: custom.css  switcher.json
